[tool.poetry]
name = "metro-network"
version = "0.1.0"
description = ""
authors = ["MatheusR42 <matheus.araujo.r42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.5"
pandas = "^1.1.4"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
